# StudyMate

./: .dockerignore  .env.example  .gitignore  Dockerfile  PLAN.md  README.md  design_doc.md  docker-compose.yml  pyproject.toml  report.md
app/: config.py  main.py  schemas.py
app/agents/: base.py  flashcard.py  graph.py  quiz.py  state.py  summary.py
app/parsers/: __init__.py  docx.py  pdf.py
app/storage/: database.py  models.py
frontend/: app.py
tests/: test_agents.py
