[project]
name = "multiagent-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "alembic>=1.18.4",
    "fastapi>=0.135.3",
    "greenlet>=3.4.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "langgraph>=1.1.6",
    "loguru>=0.7.0",
    "openai>=2.31.0",
    "pdfplumber>=0.11.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.49",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.34.0",
]
